# fastapi-postgres

./: README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.code.yml
docker/: docker-compose.services.yml
src/fastapi_postgres/: main.py
src/fastapi_postgres/database/: __init__.py  database.py  settings.py
src/fastapi_postgres/hero/: router.py
src/fastapi_postgres/hero/database_models/: __init__.py  hero.py
